--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 300vh;
-  background-color: #f8f9fa;
+  background-color: #dcecfc;
 }
 
 .app-header {
